# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  file2.yaml  pyproject.toml  setup.cfg
.github/workflows/: PyCI.yml  lint.yml  pytest  pytest.yml  python CI.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py  module1.py  parsing.py
gendiff/formaters/: __init__.py  all_formaters.py  json.py  json_format.py  plain.py  stylish.py
gendiff/misc/: flatten.py  parsing.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result5_json_treefile.txt
tests/fixtures/not_correct/: bug.json
tests/fixtures/results/: error_message.txt
